# etri_perceptions

./: README.md
episodic_memory/: CMakeLists.txt  package.xml
episodic_memory/config/: em_conf.yaml
episodic_memory/launch/: bringup.launch
episodic_memory/src/: episodic_memory_node.py  knowledge_graph.py
etri_perception_launch/: CMakeLists.txt  Readme.md  package.xml
etri_perception_launch/launch/: bringup.launch  etri_perception_pipeline.launch
etri_perceptions/: CMakeLists.txt  package.xml
etri_perceptions/launch/: bringup.launch  bringup_pipeline.launch
mhri_common/: CMakeLists.txt  package.xml
mhri_common/msg/: Constants.msg  EmotionStatus.msg  FacialExpressions.msg  GazeFocusing.msg  Presence.msg  RequestHIDInput.msg  RotationActivity.msg  SetFacialExpression.msg  SpeechPercept.msg  SpeechRecognized.msg
perception_common/: CMakeLists.txt  package.xml
perception_common/action/: BasicMotion.action  SemanticMotion.action
perception_common/msg/: Characteristics.msg  GazeCommand.msg  PersonPresenceState.msg  Sentence.msg  Skeleton.msg  TouchActivity.msg
sensory_perception/perception_vision/: README.md
sensory_perception/perception_vision/perception_face/: CMakeLists.txt  README.md  package.xml
sensory_perception/perception_vision/perception_face/data/: color_model_hsv_keras.hd5  hairlength_model_keras.hd5  name_info.json  weights_theano.h5
sensory_perception/perception_vision/perception_face/launch/: bringup.launch
sensory_perception/perception_vision/perception_face/src/: ClothColorDetectionWorker.py  ColorDetector.py  FaceRecognitionWorker.py  FaceRecognizer.py  HairLengthDetectionWorker.py  HairLengthDetector.py  QueuedProcessing.py  SmileRecognitionWorker.py  SmileRecognizer.py  magma_util.py  perception_face_node.py
sensory_perception/perception_vision/perception_mindstate/: CMakeLists.txt  package.xml
sensory_perception/perception_vision/perception_mindstate/include/: MindStateRecog.h
sensory_perception/perception_vision/perception_mindstate/launch/: bringup.launch
sensory_perception/perception_vision/perception_mindstate/src/: perception_mindstate_node.cpp
sensory_perception/perception_vision/perception_msgs/: CMakeLists.txt  package.xml
sensory_perception/perception_vision/perception_msgs/msg/: PerceptionEvent.msg  PersonIDArray.msg  PersonIdentity.msg  PersonPercept.msg  PersonPerceptArray.msg
sensory_perception/perception_vision/perception_tracking/: CMakeLists.txt  README.md  package.xml
sensory_perception/perception_vision/perception_tracking/launch/: bringup.launch
sensory_perception/perception_vision/perception_tracking/src/: perception_tracking_node.py
sensory_perception/perception_vision/pos3d_estimation/: CMakeLists.txt  package.xml
sensory_perception/perception_vision/pos3d_estimation/launch/: bringup.launch
sensory_perception/perception_vision/pos3d_estimation/src/: node.cpp
sensory_perception/perception_vision/visualization/: CMakeLists.txt  package.xml
sensory_perception/perception_vision/visualization/launch/: bringup.launch
sensory_perception/perception_vision/visualization/src/: visualize.py
social_perception/: CMakeLists.txt  package.xml
social_perception/config/: engagement_detection.yaml  face_detection.yaml  face_recognition.yaml  facial_expression_recognition.yaml  intention_recognition.yaml  names.json  people_detection.yaml  perception_conf.yaml  person_detection.yaml  presence_detection.yaml  saliency_detection.yaml  vad_by_lip_reading.yaml
social_perception/launch/: bringup.launch
social_perception/src/: DecayingPotential.py  DecisionByEvidence.py  engagement_detection.py  face_detection.py  face_recognition.py  facial_expression_recognition.py  intention_recognition.py  people_detection.py  person_detection.py  presence_detection.py  saliency_detection.py  vad_by_lip_reading.py
social_perception_core/: CMakeLists.txt  README.md  package.xml  saved_percepts.pkl
social_perception_core/data/: person-info.txt
social_perception_core/launch/: bringup.launch
social_perception_core/src/: belief_update_agent.py
