<?xml version="1.0"?>
<package>
  <name>etri_perceptions</name>
  <version>0.0.0</version>
  <description>The etri_perceptions package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="byeongkyu@todo.todo">byeongkyu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/etri_perceptions</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>episodic_memory</build_depend>
  <build_depend>perception_face</build_depend>
  <build_depend>perception_mindstate</build_depend>
  <build_depend>perception_tracking</build_depend>
  <build_depend>pos3d_estimation</build_depend>
  <build_depend>social_perception</build_depend>
  <build_depend>social_perception_core</build_depend>
  <build_depend>visualization</build_depend>
  <build_depend>perception_common</build_depend>
  <run_depend>episodic_memory</run_depend>
  <run_depend>perception_face</run_depend>
  <run_depend>perception_mindstate</run_depend>
  <run_depend>perception_tracking</run_depend>
  <run_depend>pos3d_estimation</run_depend>
  <run_depend>social_perception</run_depend>
  <run_depend>social_perception_core</run_depend>
  <run_depend>visualization</run_depend>
  <run_depend>perception_common</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
